--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
+        "stancl/tenancy": "^3.9",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
